Fixed Render deployment: Python 3.11 + pinned telegram-bot 13.15 + Flask webhooks

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: nifty-bot
     env: python
     plan: free
+    runtime: python-3.11
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
     envVars:
